# IgnitionHacks2021

./: .breakpoints  PeopleClass.py  WebScraping.py  cudoProgramIDs.txt  index.html  main.py  pyproject.toml  pytorch.py  userInfo.txt
stuff/: apiStuff.py  index.html  results.html  script.js
