[tool.poetry]
name = "repl_python3_AchingBeautifulCommas"
version = "0.1.0"
description = ""
authors = ["DonkAHez <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
lxml = "^4.6.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
